# pyproject.toml
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "max-card-count-problem"
version = "0.1.0"
description = "Demonstration of debugging and optimizing a recursive DP problem."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"